ros2_ws/log/build_2026-04-15_13-36-21/minisumo_core/stderr.log
  File "/home/dae/ros2_ws/install/minisumo_core/lib/python3.8/site-packages/minisumo_core/odometria.py", line 59
    a)
     ^
SyntaxError: unmatched ')'

